--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 @font-face {font-family: Inter-Thin; src: url('Assets/Fonts/Inter-Thin-slnt=0.ttf');} 
 @font-face {font-family: SFMono-Medium; src: url('Assets/Fonts/SFMonoMedium.otf');} 
 @font-face {font-family: SFMono-Regular; src: url('Assets/Fonts/SFMonoRegular.otf');} 
+@font-face {font-family: Cinzel-Regular; src: url('Assets/Fonts/Cinzel-Regular.ttf');} 
 
 :root {
 	--delay: 1s;
@@ -136,10 +137,8 @@ body.offcanvas-active{
 }
 
 #blog {
-	height: 100%;
-
 	display: none;
-	background-color: #F0F0F0;
+	background-color: #F5F5F5;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -370,7 +369,7 @@ a:link {
 .title-head-text {
 	flex-grow: 0;
 
-	font-size: calc(20px + 2.15vw);
+	font-size: calc(20px + 1.5vw);
 	font-family: Inter-Bold;
 	color: #F0F0F0;
 
@@ -405,7 +404,7 @@ a:link {
 .title-head-text-black {
 	flex-grow: 0;
 
-	font-size: calc(20px + 2.15vw);
+	font-size: calc(20px + 1.5vw);
 	font-family: Inter-Bold;
 	color: #101010;
 
@@ -576,10 +575,6 @@ a:link {
 	opacity: 0;
 }
 
-.history-position-items {
-
-}
-
 .history-position-item-container {
 	display: flex;
 	flex-direction: row;
@@ -652,10 +647,6 @@ a:link {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-}
-
-.history-award-items {
-
 }
 
 .history-award-item-container {
@@ -737,7 +728,6 @@ a:link {
 
 .art-item-image {
 	position: relative;
-	z-index: 0;
 
 	height: 16.67vw;
 
@@ -749,6 +739,112 @@ a:link {
 
 	box-shadow: 6px 6px 20px #101010;
 	transform: scale(1.02);
+}
+
+/* Blog */
+
+#blog-items {
+}
+
+#blog-recommended {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.blog-subtitle {
+	margin-top: 30px;
+	margin-left: calc(48vw - 460px);
+	margin-bottom: 30px;
+
+	font-size: 30px;
+	font-family: Inter-SemiBold;
+	color: #101010;
+}
+
+.blog-recommended-items {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-self: center;
+
+	width: 60%;
+	margin-left: 8%;
+}
+
+.blog-recommended-item-container {
+	margin-right: 3%;
+	box-shadow: 0px 0px 3px #E5E5E5;
+}
+
+.blog-recommended-item-container:hover {
+	box-shadow: 0px 0px 5px #D0D0D0;
+}
+
+.blog-item-image-container {
+
+}
+
+.blog-item-image {
+	width: 270px;
+	height: 140px;
+}
+
+.blog-recommended-item-text {
+	color: #101010;
+	font-family: Cinzel-Regular;
+	font-size: 20px;
+
+	padding: 3%;
+	padding-left: 5%;
+	padding-top: 4%;
+	background-color: #FFFFFF;
+}
+
+#blog-post {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.blog-items {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-self: center;
+
+	width: 60%;
+	margin-left: 8%;
+}
+
+.blog-item-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+
+	border-bottom-width: 1px;
+	border-color: #101010;
+}
+
+.blog-item-text {
+	color: #101010;
+	font-family: Cinzel-Regular;
+	font-size: 22px;
+}
+
+.blog-item-details {
+	display: block;
+	align-self: center;
+
+	color: #808080;
+	font-family: Inter-Regular;
+	font-size: 14px;
+}
+
+#blog-story {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 /* Views */
