--- a/blog/the-loyolite/styles.css
+++ b/blog/the-loyolite/styles.css
@@ -1,31 +1,74 @@
-.home {
+@font-face {font-family: Inter-Medium; src: url('../../Assets/Fonts/Inter-Medium-slnt=0.ttf');} 
+@font-face {font-family: Inter-Light; src: url('../../Assets/Fonts/Inter-Light-slnt=0.ttf');} 
+@font-face {font-family: Spectral-Medium; src: url('../../Assets/Fonts/Spectral-Medium.ttf');}
+@font-face {font-family: Spectral-Regular; src: url('../../Assets/Fonts/Spectral-Regular.ttf');}
+@font-face {font-family: Spectral-Light; src: url('../../Assets/Fonts/Spectral-Light.ttf');}
 
+.home {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+
+	height: 50px;
 }
 
 .link {
+	margin-left: 10px;
 
+	font-size: 25px;
+	font-family: Inter-Medium;
+}
+
+.link a {
+	color: inherit;
+	text-decoration: none;
+}
+
+.link a:hover {
+	color: #505050;
+}
+
+.main {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .head {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 
+	height: 200px;
+	width: 700px;
 }
 
 .title {
+	margin-bottom: 5px;
 
+	font-size: 40px;
+	font-family: Spectral-Medium;
 }
 
 .details {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+
+	margin-bottom: 5px;
+
+	font-size: 15px;
+	font-family: Spectral-Light;
+	color: #808080;
 }
 
 .type {
-
+	padding-right: 30px;
 }
 
 .date {
-
+	padding-right: 30px;
 }
 
 .count {
@@ -38,5 +81,19 @@
 }
 
 .content {
+	width: 700px;
+	margin-bottom: 100px;
 
+	font-size: 17px;
+	font-family: Spectral-Regular;
+}
+
+
+@media only screen and (max-width: 750px) {
+	.head {
+		width: 93vw;
+	}
+	.content {
+		width: 93vw;
+	}
 }
